--- a/Test-Robin/index.html
+++ b/Test-Robin/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
     <div class="controls-container-top">
         <div id="edit-text">
             <input type="text" name="scrambleAlg" id="scrambleAlg" maxlength="100" placeholder="Scramble algorithm. Eg. F R2 U'" size="26">
-            <button id="Play">
+            <button id="play">
                 <i class="fa-regular fa-play"></i>
             </button>
         </div>
@@ -48,7 +49,7 @@
 
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 <script src="script.js"></script>
 
