--- a/Test-Pierre/index.html
+++ b/Test-Pierre/index.html
@@ -2,44 +2,81 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <input type="text" id="algs-input">
-    <button id="execute-move">Execute Move</button>
-
-    <div class="cube-2d-container">
-        <div class="top-row">
-            <table id="face-U" class="cube-table">
-            </table>
+    <div class="header">
+        <div class="title">
+            <h1>Rubik's Cube</h1>
         </div>
 
-        <div class="mid-row">
-            <table id="face-L" class="cube-table">
-            </table>
+        <div class="algs-controls">
+            <button id="reset-cube">
+                <i class="fa-solid fa-trash"></i>
+            </button>
 
-            <table id="face-F" class="cube-table">
-            </table>
+            <button id="step-back">
+                <i class="fa-solid fa-backward-step"></i>
+            </button>
 
-            <table id="face-R" class="cube-table">
-            </table>
+            <input type="text" id="algs-input">
 
-            <table id="face-B" class="cube-table">
-            </table>
+            <button id="step-front">
+                <i class="fa-solid fa-forward-step"></i>
+            </button>
+
+            <button id="complete-move">
+                <i class="fa-solid fa-forward-fast"></i>
+            </button>
         </div>
 
-        <div class="bot-row">
-            <table id="face-D" class="cube-table">
-            </table>
+        <div class="toggle-view-container">
+            <span>2D View</span>
+                <input type="checkbox" name="" id="toggle-view" class="switch" checked="true">
+            <span>3D View</span>
         </div>
     </div>
 
-    <div id="cube-3d-container"></div>
+    <div class="view_2d">
+        <div class="cube-2d-container">
+            <div class="top-row">
+                <table id="face-U" class="cube-table">
+                </table>
+            </div>
+
+            <div class="mid-row">
+                <table id="face-L" class="cube-table">
+                </table>
+
+                <table id="face-F" class="cube-table">
+                </table>
+
+                <table id="face-R" class="cube-table">
+                </table>
+
+                <table id="face-B" class="cube-table">
+                </table>
+            </div>
+
+            <div class="bot-row">
+                <table id="face-D" class="cube-table">
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="view_3d">
+        <div id="cube-3d-container"></div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script-2d.js"></script>
     <script src="script-3d.js"></script>
+    <script src="toggle-view.js"></script>
 
 
 
