--- a/Test-Pierre/webApp/html/index.html
+++ b/Test-Pierre/webApp/html/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -70,13 +70,15 @@
     </div>
 
     <div class="view_3d">
-        <div id="cube-3d-container"></div>
+        <div id="cube-3d">
+        </div>
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="script-2d.js"></script>
-    <script src="script-3d.js"></script>
-    <script src="toggle-view.js"></script>
+   
+    <script src="../libs/Three.js"></script>
+    <script src="../libs/OrbitControl.js"></script>
+    <script src="../js/script-2d.js"></script>
+    <script src="../js/script-3d.js"></script>
+    <script src="../js/helper.js"></script>
 
 
 
