--- a/Test-Pierre/webApp/html/overview.html
+++ b/Test-Pierre/webApp/html/overview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="overview.css">
+    <link rel="stylesheet" href="../css/overview.css">
     <title>Overview</title>
 </head>
 <body>
@@ -51,6 +51,6 @@
         
     </div>
 
-    <script src="overview.js"></script>
+    <script src="../js/overview.js"></script>
 </body>
 </html>
