add toggle orbit control

--- a/Test-Pierre/webApp/html/index.html
+++ b/Test-Pierre/webApp/html/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="header">
         <div class="title">
-            <h1>Rubik's Cube</h1>
+            <a href="overview.html">
+                <h1>Rubik's Cube</h1>
+            </a>
         </div>
 
         <div class="algs-controls">
@@ -34,10 +36,18 @@
             </button>
         </div>
 
-        <div class="toggle-view-container">
-            <span>2D View</span>
-                <input type="checkbox" name="" id="toggle-view" class="switch" checked="true">
-            <span>3D View</span>
+        <div class="settings-container">
+            <div class="toggle-view-container">
+                <span>2D View</span>
+                    <input type="checkbox" name="" id="toggle-view" class="switch" checked="true">
+                <span>3D View</span>
+            </div>
+
+            <div class="toggle-orbit-container">
+                <span>Orbit Off</span>
+                    <input type="checkbox" name="" id="toggle-orbit" class="switch" checked="true">
+                <span>Orbit On</span>
+            </div>
         </div>
     </div>
 
