--- a/Test-Pierre/webApp/html/overview.html
+++ b/Test-Pierre/webApp/html/overview.html
@@ -8,48 +8,7 @@
     <title>Overview</title>
 </head>
 <body>
-    <div class="global-container">
-        <!-- <div class="row" id="Y-1">
-            <div class="rubik-ctn finished" alg="z' L' R U R2 L2">
-                <div class="top-row">
-                    <div class="face blue"></div>
-                    <div class="face green"></div>
-                    <div class="face blue"></div>
-                </div>
-                <div class="mid-row">
-                    <div class="face blue"></div>
-                    <div class="face red"></div>
-                    <div class="face blue"></div>
-                </div>
-                <div class="bot-row">
-                    <div class="face blue"></div>
-                    <div class="face green"></div>
-                    <div class="face blue"></div>
-                </div>
-            </div>
-
-            <div class="rubik-ctn not-finished" alg="x' U' F' B U' R2 D2 L">
-                <div class="top-row">
-                    <div class="face green"></div>
-                    <div class="face blue"></div>
-                    <div class="face orange"></div>
-                </div>
-                <div class="mid-row">
-                    <div class="face red"></div>
-                    <div class="face blue"></div>
-                    <div class="face green"></div>
-                </div>
-                <div class="bot-row">
-                    <div class="face green"></div>
-                    <div class="face blue"></div>
-                    <div class="face orange"></div>
-                </div>
-            </div>
-        </div> -->
-
-
-        
-    </div>
+    <div class="global-container"></div>
 
     <script src="../js/overview.js"></script>
 </body>
