--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-    window.location.href = "html/complete-fresco.html"
+    window.location.href = "webApp/html/complete-fresco.html"
 </script>
